# mrs_project_crazyflies

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: reynolds.launch.py
mrs_project_crazyflies/: consensus_formation.py  consensus_rendezvous.py  land.py  reynolds.py  svc.py
mrs_project_crazyflies/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mrs_project_crazyflies/log/: latest_build
