<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrs_project_crazyflies</name>
  <version>0.0.0</version>
  <description>Description of your package</description>
  <maintainer email="renatto.tommasi@gmail.com">Renatto Tommasi</maintainer> 
  <license>Apache License 2.0</license>

  <depend>rclpy</depend> 

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type> 
  </export>
</package>